added style producs.js

--- a/css/vars.less
+++ b/css/vars.less
@@ -5,8 +5,22 @@
 @gray-light: #95989A;
 @gray: #666666;
 @white: #ffffff;
+@color-unaccent: #808080;
+
+@linear-gradient: linear-gradient(to right, #e2f87c, #d6f567, #c8f151, #b9ee38, #a8eb12);
 
 @mobile-sm: ~"(max-width: 565px)";
 @mobile: ~"(max-width: 767px)";
 @tablet: ~"(max-width: 991px)";
 @notebook: ~"(max-width: 1170px)";
+
+@spacing-small: 10px;
+@spacing-medium: 15px;
+@spacing-large: 30px;
+
+@box-chadow:
+    0 16px 24px 2px rgba(33, 37, 41,.02),
+    0 6px 30px 5px rgba(33, 37, 41,.04),
+    0 8px 10px -5px rgba(33, 37, 41,.1);
+
+@border-radius: 3px;
