--- a/css/style.less
+++ b/css/style.less
@@ -37,6 +37,6 @@ p{
 @import "blocks/subscribe";
 @import "blocks/partners";
 @import "blocks/footer";
-@import "blocks/producs";
+@import "blocks/products";
 
 /* helpers */
