create style products + rename

--- a/css/blocks/products.less
+++ b/css/blocks/products.less
@@ -14,7 +14,7 @@
     flex-direction: column; //колонки
     justify-content: flex-end; //прижимаем все к нижней части блока
     padding: 25px 20px;
-    background-color: @gray-light;
+    background-color: @gray;
     border-radius: @border-radius;
     box-shadow: @box-chadow;
 }
