--- a/css/style.less
+++ b/css/style.less
@@ -38,5 +38,19 @@ p{
 @import "blocks/partners";
 @import "blocks/footer";
 @import "blocks/products";
+@import "blocks/shopping";
 
 /* helpers */
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: @gray;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: @white;
+}
