--- a/css/blocks/footer.less
+++ b/css/blocks/footer.less
@@ -33,8 +33,12 @@
 }
 
 .icon_social{
-
+    display: flex;
+    width: 25px;
+    height: 25px;
+    padding: 2px;
 }
+
 
 .footer_copyright{
     padding-top: 45px;
