--- a/css/blocks/items.less
+++ b/css/blocks/items.less
@@ -94,11 +94,14 @@ h4{
 
     @media @notebook {
         width: 50%;
+        padding-left: 5px;
+        padding-right: 5px;;
      }
-
+     
     @media @mobile-sm{
         width: 100%;
         text-align: center;
+        
      }
 }
 
