--- a/css/blocks/header.less
+++ b/css/blocks/header.less
@@ -17,8 +17,16 @@
     width: auto;
 }
 
+.logo__top a{
+    text-decoration: none;
+    color: #000;
+}
+
 .nav__top{
-    width: auto;
+    display: flex;
+}
+
+.nav__links{
 
     @media @mobile{
         display: none;
@@ -67,10 +75,13 @@
 
 //Burger_menu
 
-//.section-btn{}
+.section-btn{
+    margin-top: -12px;
+}
 
 .menu-btn span{
-    margin: 10px;
+    margin-right: 20px;
+
     display: none;
     width: 50px;
     height: 50px;
@@ -78,7 +89,7 @@
     @media @mobile {
         display: block;
         flex-basis: 100%;
-        text-align: center;        
+        text-align: center;
     }
 }
 
