change padding header

--- a/css/blocks/header.less
+++ b/css/blocks/header.less
@@ -11,6 +11,10 @@
     justify-content: space-between;
 
     padding-top: 2rem;
+
+    @media @mobile{
+        padding-top: 1rem;
+    }
 }
 
 .logo__top{
@@ -76,7 +80,7 @@
 //Burger_menu
 
 .section-btn{
-    margin-top: -12px;
+    margin-top: -20px;
 }
 
 .menu-btn span{
