change padding header #2

--- a/css/blocks/header.less
+++ b/css/blocks/header.less
@@ -37,6 +37,14 @@
     }
 }
 
+.header-basket{
+
+    @media @mobile{
+        padding-top: 7px;
+    }
+    
+}
+
 .nav__link{
     margin: 0 1rem;
     font-size: 0.73rem;
@@ -80,7 +88,7 @@
 //Burger_menu
 
 .section-btn{
-    margin-top: -20px;
+    margin-top: -5px;
 }
 
 .menu-btn span{
